Added a test for adding an offline institution/account tracked by balances and for adding a balance. Changed responses for adding an institution and adding a balance to use the ApiResponse structure.
